This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Current Android does not have posix_spawn
Type: compile error Stage: resolved
Components: Cross-Build Versions: Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: Alex.Willmer, gregory.p.smith, vstinner, yan12125
Priority: normal Keywords: patch

Created on 2018-01-29 07:42 by yan12125, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
build.log yan12125, 2018-01-29 07:42
Pull Requests
URL Status Linked Edit
PR 5413 merged yan12125, 2018-01-29 07:49
Messages (4)
msg311078 - (view) Author: (yan12125) * Date: 2018-01-29 07:42
Currently Android does not have posix_spawn, thus posixmodule.c does not build. Build log attached. I'll create a patch for this.

Testing environment: my building scripts [1] + Android NDK r16b
Building target: ARM64, android-21

/cc Primary reviewer of issue 20104 and Android enthusiasts in CPython

PS. Looks like posix_spawn will be available in Android P (API 28) [2]. For now I propose to disable it in CPython.

[1] https://github.com/yan12125/python3-android/
[2] https://android-review.googlesource.com/c/platform/bionic/+/504842
msg311085 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2018-01-29 09:50
New changeset 8997f9cd1a59f04fbb8c7b590295a9f38c548744 by Victor Stinner (Chih-Hsuan Yen) in branch 'master':
bpo-32705: Current Android does not have posix_spawn (#5413)
https://github.com/python/cpython/commit/8997f9cd1a59f04fbb8c7b590295a9f38c548744
msg311249 - (view) Author: (yan12125) * Date: 2018-01-30 07:33
With https://github.com/python/cpython/pull/5418 merged, I guess this issue can be closed?
msg311251 - (view) Author: Gregory P. Smith (gregory.p.smith) * (Python committer) Date: 2018-01-30 07:40
likely.  i don't have an android build, please reopen if there are still android posix_spawn related build issues.
History
Date User Action Args
2022-04-11 14:58:57adminsetgithub: 76886
2018-01-30 07:40:36gregory.p.smithsetstatus: open -> closed
resolution: fixed
messages: + msg311251

stage: patch review -> resolved
2018-01-30 07:33:03yan12125setmessages: + msg311249
2018-01-29 09:50:43vstinnersetmessages: + msg311085
2018-01-29 07:49:14yan12125setkeywords: + patch
stage: patch review
pull_requests: + pull_request5247
2018-01-29 07:42:18yan12125create