bpo-32705: Current Android does not have posix_spawn (#5413)